[package]
name = "blockrouter"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"
links = "mbedtls"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
libc = "0.2"
nom = "5.1.1"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "io-driver"]}

[build-dependencies]
pkg-config = "0.3.8"
