[package]
name = "blockrouter"
version = "0.1.0"
authors = ["Joe Hirschfeld <joe@ibj.io>"]
edition = "2018"
links = "mbedtls"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
crossbeam-queue = "0.2"
crossbeam-utils = "0.7"
libc = "0.2"
memmap = "0.7"
nom = "5.1.1"
semaphore = "0.4"
tokio = { version = "0.2", features = ["io-util", "rt-core", "rt-threaded", "tcp"]}

[build-dependencies]
pkg-config = "0.3.8"
